<resources>
    <string name="app_name">Mini Twitter</string>

    <!-- String Login and SingUp -->

    <string name="enter_email">Correo Eléctronico</string>
    <string name="enter_password">Contraseña</string>
    <string name="enter_username">Nombre de Usuario</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_signup">Registrarme</string>
    <string name="create_account">Regístrate Aquí</string>
    <string name="btn_back_login">Ya tienes cuenta, Inicia Sesión</string>
    <string name="error_empty">Campo Obligatorio</string>
    <string name="error_login">Error usuario o contraseña incorrecto</string>
    <string name="error_signup">Error usuario ya existe</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">Prueba</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_appbar_home">Inicio</string>
    <string name="button_new_tweet">Twittear</string>
    <string name="hint_new_tweet">¿Qué está pasando?</string>
    <string name="alert_message_new_dialog">¿Desea realmente eliminar el Tweet?. \nEl mensaje se borrará</string>
    <string name="title_alert_message_dialog">Cancelar Tweet</string>
    <string name="btn_possitive_confir_alert_dialog">Eliminar</string>
    <string name="btn_negative_confir_alert_dialog">Cancelar</string>
    <string name="delete_tweet">Eliminar Tweet</string>
    <string name="btn_save">Guardar</string>
    <string name="change_password">¿Desea cambiar contraseña?</string>
    <string name="enter_website">Website</string>
    <string name="enter_description">Descripción</string>
    <string name="title_permissions">Permisos</string>
    <string name="message_permission">Los permisos solicitados son necesarios para poder seleccionar una foto de perfil</string>


</resources>
