<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.luisg.minitwitter.view.ui.tweet.TwettFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_twett"></fragment>

    <fragment
        android:id="@+id/navigation_tweet_like"
        android:name="com.luisg.minitwitter.view.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.luisg.minitwitter.view.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <dialog
        android:id="@+id/newTweetDialogFragment"
        android:name="com.luisg.minitwitter.view.ui.NewTweetDialogFragment"
        android:label="NewTweetDialogFragment" />
    <activity
        android:id="@+id/dashboardActivity"
        android:name="com.luisg.minitwitter.view.DashboardActivity"
        android:label="DashboardActivity" />
</navigation>
